RESOLVED FIXED285209
[Cleanup] RenderBlock::logicalLeft/RightOffsetForContent do not need "fragment"
https://bugs.webkit.org/show_bug.cgi?id=285209
Summary [Cleanup] RenderBlock::logicalLeft/RightOffsetForContent do not need "fragment"
alan
Reported 2024-12-27 19:21:19 PST
ssia
Attachments
Patch (22.85 KB, patch)
2024-12-27 19:25 PST, alan
no flags
Patch (22.93 KB, patch)
2024-12-27 19:26 PST, alan
no flags
[fast-cq]Patch (22.72 KB, patch)
2024-12-31 06:36 PST, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-12-27 19:25:10 PST
alan
Comment 2 2024-12-27 19:26:16 PST
alan
Comment 3 2024-12-31 06:36:59 PST
Created attachment 473722 [details] [fast-cq]Patch
EWS
Comment 4 2024-12-31 08:57:46 PST
Committed 288342@main (ee5db5fb885a): <https://commits.webkit.org/288342@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473722 [details].
Radar WebKit Bug Importer
Comment 5 2024-12-31 08:58:15 PST
Note You need to log in before you can comment on or make changes to this bug.