[Cleanup] RenderBlock::logicalLeft/RightOffsetForContent do not need "fragment" https://bugs.webkit.org/show_bug.cgi?id=285209

Reviewed by Antti Koivisto.

1. After removing borderBoxRectInFragment, logicalLeft/RightOffsetForContent functions could drop the incoming 'fragment' parameter.
2. Not needing to pass in 'fragment' makes a few more functions redundant as they are
just 'fragment' variants with the same functionality.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateRenderTreePositions):
* Source/WebCore/rendering/LegacyRootInlineBox.cpp:
(WebCore::LegacyRootInlineBox::lineBoxWidth const):
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::logicalLeftOffsetForContent const):
(WebCore::RenderBlock::logicalRightOffsetForContent const):
* Source/WebCore/rendering/RenderBlock.h:
(WebCore::RenderBlock::availableLogicalWidthForContent const):
(WebCore::RenderBlock::logicalLeftOffsetForContent const): Deleted.
(WebCore::RenderBlock::logicalRightOffsetForContent const): Deleted.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::updateStaticInlinePositionForChild):
(WebCore::RenderBlockFlow::setStaticInlinePositionForChild):
(WebCore::RenderBlockFlow::computeLogicalLocationForFloat):
(WebCore::RenderBlockFlow::getClearDelta):
* Source/WebCore/rendering/RenderBlockFlow.h:
* Source/WebCore/rendering/RenderBlockInlines.h:
(WebCore::RenderBlock::endOffsetForContent const):
(WebCore::RenderBlock::logicalMarginBoxHeightForChild const):
(WebCore::RenderBlock::logicalRightOffsetForLine const):
(WebCore::RenderBlock::logicalLeftOffsetForLine const):
(WebCore::RenderBlock::availableLogicalWidthForLine const):
(WebCore::RenderBlock::logicalLeftOffsetForContent const): Deleted.
(WebCore::RenderBlock::logicalRightOffsetForContent const): Deleted.
(WebCore::RenderBlock::availableLogicalWidthForLineInFragment const): Deleted.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shrinkLogicalWidthToAvoidFloats const):
* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::layout):

Canonical link: https://commits.webkit.org/288342@main